--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Open Sans', 'Arial', sans-serif;
 }
@@ -42,6 +46,8 @@ body {
 header {
     background: var(--main-white-color);
     box-shadow: 0px 4px 20px var(--main-box-shadow-color);
+    position: fixed;
+    width: 100%;
 }
 
 .header-part {
@@ -145,7 +151,7 @@ header {
 
 /* Start Hero Section */
 #hero {
-    padding: 80px 0;
+    padding: 142px 0 80px 0;
 }
 
 .hero-part {
@@ -156,6 +162,11 @@ header {
 
 .hero-text {
     width: 470px;
+}
+
+.hero-part-iframe {
+    border: none;
+    border-radius: 5px;
 }
 
 .hero-text h1,
