--- a/css/main.css
+++ b/css/main.css
@@ -45,8 +45,9 @@ body {
 /* Start Header */
 header {
     position: fixed;
+    z-index: 1000;
     width: 100%;
-    background: var(--main-white-color);
+    background-color: var(--main-white-color);
     box-shadow: 0px 4px 20px var(--main-box-shadow-color);
 }
 
@@ -92,10 +93,51 @@ header {
     border-bottom: 3px solid transparent;
 }
 
-.header-item{
+.header-item {
+    position: relative;
     padding: 16px;
     border: 3px solid transparent;
     transition: all 0.5s ease-in-out;
+}
+
+.header-service-list {
+    display: none;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 132px;
+    background-color: var(--main-white-color);
+    list-style: none;
+}
+
+.header-item:hover .header-service-list {
+    display: block;
+}
+
+.header-sevice-item {
+    padding: 10px;
+}
+
+.header-sevice-item a {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: var(--main-color-link);
+    text-decoration: none;
+}
+
+.header-sevice-item:hover {
+    background-color: #00BAFC;
+    color: var(--main-white-color);
+}
+
+.header-sevice-item:hover a {
+    color: var(--main-white-color);
+}
+
+.header-sevice-item:active {
+    background-color: #00BAFC;
+    opacity: 0.6;
 }
 
 .header-item:hover {
@@ -107,7 +149,7 @@ header {
     opacity: 0.6;
 }
 
-.header-item:active .header-link{
+.header-item:active .header-link {
     color: var(--main-white-color);
 }
 
@@ -237,6 +279,11 @@ header {
     transition: 0.5s;
 }
 
+.aos-init,
+.aos-animate {
+    z-index: -1;
+}
+
 .service-item:nth-child(3) {
     margin: 0;
 }
@@ -330,7 +377,7 @@ header {
     margin-bottom: 48px;
 }
 
-.how-we-work-item:last-child{
+.how-we-work-item:last-child {
     margin-bottom: 0;
 }
 
@@ -483,7 +530,7 @@ footer {
     margin-bottom: 0;
 }
 
-.footer-social-link{
+.footer-social-link {
     display: flex;
     transition: 0.5s;
 }
@@ -512,7 +559,7 @@ footer {
     margin: 0;
     color: var(--main-white-color);
     text-decoration: none;
-    transition:  0.5s;
+    transition: 0.5s;
 }
 
 .footer-pages-link:hover,
@@ -528,4 +575,5 @@ footer {
 .footer-social-links-box {
     width: 142px;
 }
+
 /* End of Footer Section */
